{+} Adding login page and "Login with Google" button.

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>CA2106</title>
+    <title>DCUflix</title>
 </head>
 <body>
 <h1>Our Final Project</h1>
 <script src="./scripts/script.js"></script>
+<a href="./login.html"><button>Login</button></a>
 </body>
 </html>
