--- a/src/login.html
+++ b/src/login.html
@@ -2,13 +2,25 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="./styles/login.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/style.css">
+  <link href="/lib/bootstrap.min.css" rel="stylesheet">
+  <link href="/src/styles/login.css" rel="stylesheet">
+  <script src="/lib/bootstrap.min.js"></script>
   <title>DCUflix - Login</title>
 </head>
 
 <body>
-  <img src="/assets/logo.png" alt="DCUflix Logo">
-  <button class="login-with-google-btn">Sign in with Google</button>
+  <div class="container-sm">
+    <div class="d-flex flex-column justify-content-center">
+      <form class="card">
+        <button class="btn btn-primary" onclick="window.location.href='./index.html'">Back</button>
+        <button class="login-with-google-btn">Sign in with Google</button>
+      </form>
+    </div>
+  </div>
 </body>
 
 </html>
