{~} Updating HTML imports.

--- a/src/login.html
+++ b/src/login.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/style.css">
-  <link href="/lib/bootstrap.min.css" rel="stylesheet">
-  <link href="/src/styles/login.css" rel="stylesheet">
-  <script src="/lib/bootstrap.min.js"></script>
+  <link href="../lib/bootstrap.min.css" rel="stylesheet">
+  <link href="./styles/login.css" rel="stylesheet">
+  <script src="../lib/bootstrap.min.js"></script>
   <title>DCUflix - Login</title>
 </head>
 
