{+} Adding final Login pages, adding logo-component and updating logo png.

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,12 @@
   <link rel="stylesheet" href="./styles/style.css">
   <link href="../lib/bootstrap.min.css" rel="stylesheet">
   <script src="../lib/bootstrap.min.js"></script>
-  <title>DCUflix</title>
+  <script src="components/logo.js" type="text/javascript" defer></script>
+  <title>DCUFlix</title>
 </head>
 
 <body>
+  <logo-component></logo-component> 
   <h1>Our Final Project</h1>
   <script src="./scripts/script.js"></script>
   <button class="btn btn-primary" onclick="window.location.href='./login.html'">Login</button>
