--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/style.css">
-  <link href="../lib/bootstrap.min.css" rel="stylesheet">
-  <script src="../lib/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/styles/style.css">
+  <link href="/lib/bootstrap.min.css" rel="stylesheet">
+  <script src="/lib/bootstrap.min.js"></script>
   <script src="components/logo.js" type="text/javascript" defer></script>
   <title>DCUFlix</title>
 </head>
@@ -15,7 +15,7 @@
 <body>
   <logo-component></logo-component> 
   <h1>Our Final Project</h1>
-  <script src="./scripts/script.js"></script>
+  <script src="/scripts/script.js"></script>
   <button class="btn btn-primary" onclick="window.location.href='./login.html'">Login</button>
 </body>
 
