--- a/register.html
+++ b/register.html
@@ -10,13 +10,13 @@
   <script src="lib/bootstrap.min.js"></script>
   <!-- Styles -->
   <link href="styles/style.css" rel="stylesheet">
-  <link href="styles/login.css" rel="stylesheet">
+  <link href="styles/register.css" rel="stylesheet">
   <!-- Scripts -->
   <script src="scripts/main.js"></script>
   <!-- Components -->
   <script src="components/logo.js" type="text/javascript" defer></script>
   <script src="components/with-google-button.js" type="text/javascript" defer></script>
-  <title>DCUFlix - Login</title>
+  <title>DCUFlix - Register</title>
 </head>
 
 <body>
@@ -24,22 +24,21 @@
   <div class="container-l d-flex justify-content-center align-items-center" style="height: 100vh;">
     <div class="d-flex flex-column justify-content-center align-items-center p-5" style="background-color: rgba(0,0,0,.75);">
       <form style="width: 20vw">
-        <p class="fs-2 text-white">Sign In</p>
+        <p class="fs-2 text-white">Sign Up</p>
         <div class="mb-3">
           <input type="email" class="form-control bg-dark border-0" placeholder="Email or phone number">
         </div>
         <div class="mb-3">
           <input type="password" class="form-control bg-dark border-0" placeholder="Password">
         </div>
-        <button id="test" class="btn btn-danger w-100 mt-3" onclick="redirect('profile-selection.html')">Sign In</button>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input bg-black mt-2" id="exampleCheck1">
-          <label class="form-check-label text-white mt-2" for="exampleCheck1">Remember me</label>
+        <div class="mb-3">
+          <input type="password" class="form-control bg-dark border-0" placeholder="Confirm password">
         </div>
-        <p class="text-white text-center">or</p>
-        <with-google-button text="Sign in with Google" onclick="redirect('profile-selection.html')"></with-google-button>
+        <button id="test" class="btn btn-danger w-100 mt-3" onclick="redirect('login.html')">Sign Up</button>
+        <p class="text-white text-center mt-2">or</p>
+        <with-google-button text="Sign up with Google" onclick="redirect('login.html')"></with-google-button>
       </form>
-      <p class="text-white-50 pt-5">New to DCUFlix? <a class="signup" href="register.html">Sign up now</a>.</p>
+      <p class="text-white-50 pt-5">You alread have a DCUFlix account? <a class="signin" href="login.html">Sign in now</a>.</p>
     </div>
   </div>
 </body>
