--- a/index.html
+++ b/index.html
@@ -2,31 +2,34 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/styles/style.css" rel="stylesheet">
-  <link href="/lib/bootstrap.min.css" rel="stylesheet">
-  <script src="/lib/bootstrap.min.js"></script>
-  <script src="components/logo.js" type="text/javascript" defer></script>
-  <title>DCUFlix</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/styles/style.css" rel="stylesheet">
+    <link href="/lib/bootstrap.min.css" rel="stylesheet">
+    <script src="/lib/bootstrap.min.js"></script>
+    <script src="components/logo.js" type="text/javascript" defer></script>
+    <title>DCUFlix</title>
 </head>
 
 <body>
+<logo-component></logo-component>
 <div class="ctr">
     <img src="../assets/home-background.jpg" alt="background image">
     <div class="filter"></div>
-        <div class="header">
-<!--            <img classe='logo' src="../assets/logo.png" alt="logo">-->
-            <input class="ctr__signin" type="button" value="Sign in">
+    <div class="header">
+        <div class="header__logo-ctr">
+            <img class='header__logo' src="../assets/logo.png" alt="logo">
         </div>
+        <input class="header__signin" type="button" value="Sign in">
+    </div>
     <div class="ctr__hero">
         <h1> Unlimited films, TV programmes and more</h1>
         <p>Watch anywhere. Cancel at any time.</p>
         <p>Ready to watch? Enter your email to create or restart your membership.</p>
         <div class="ctr__hero__get-started">
             <input class="ctr__hero_email" type="text" placeholder="Email address"/>
-            <input class="ctr__hero_start" type="button" value="Get Started">
+            <input class="ctr__hero_start" type="button" value="Get Started  >">
         </div>
     </div>
 </div>
