{+} Adding background component and making every page responsive.

--- a/profile-selection.html
+++ b/profile-selection.html
@@ -17,25 +17,27 @@
   <title>DCUFlix - Profile selection</title>
 </head>
 
-<body class="container vh-100 bg-dark d-flex flex-column justify-content-center align-items-center">
+<body class="bg-dark vh-100">
   <logo-component></logo-component>
-  <p class="fs-1 text-white mb-4">Who's watching?</p>
-  <div class="row text-center">
-    <div class="col d-flex flex-column m-3 p-0" onclick="redirect('browse.html')">
-      <img src="assets/user-icon-1.jpg" alt="User 1" class="profile-picture">
-      <p class="text-white-50">User 1</p>
-    </div>
-    <div class="col d-flex flex-column m-3 p-0" onclick="redirect('browse.html')">
-      <img src="assets/user-icon-2.jpg" alt="User 2" class="profile-picture">
-      <p class="text-white-50">User 2</p>
-    </div>
-    <div class="col d-flex flex-column m-3 p-0" onclick="redirect('browse.html')">
-      <img src="assets/user-icon-3.jpg" alt="User 3" class="profile-picture">
-      <p class="text-white-50">User 3</p>
-    </div>
-    <div class="col d-flex flex-column m-3 p-0" onclick="redirect('browse.html')">
-      <img src="assets/user-icon-4.jpg" alt="User 4" class="profile-picture">
-      <p class="text-white-50">User 4</p>
+  <div class="d-flex flex-column justify-content-center align-items-center flex-nowrap" style="height: 85%">
+    <p class="fs-1 text-white mb-4">Who's watching?</p>
+    <div class="row text-center">
+      <div class="col d-flex flex-column m-3 p-0" onclick="redirect('browse.html')">
+        <img src="assets/user-icon-1.jpg" alt="User 1" class="profile-picture">
+        <p class="text-white-50">User 1</p>
+      </div>
+      <div class="col d-flex flex-column m-3 p-0" onclick="redirect('browse.html')">
+        <img src="assets/user-icon-2.jpg" alt="User 2" class="profile-picture">
+        <p class="text-white-50">User 2</p>
+      </div>
+      <div class="col d-flex flex-column m-3 p-0" onclick="redirect('browse.html')">
+        <img src="assets/user-icon-3.jpg" alt="User 3" class="profile-picture">
+        <p class="text-white-50">User 3</p>
+      </div>
+      <div class="col d-flex flex-column m-3 p-0" onclick="redirect('browse.html')">
+        <img src="assets/user-icon-4.jpg" alt="User 4" class="profile-picture">
+        <p class="text-white-50">User 4</p>
+      </div>
     </div>
   </div>
 </body>
