--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/styles/style.css" rel="stylesheet">
-    <link href="/lib/bootstrap.min.css" rel="stylesheet">
-    <script src="/lib/bootstrap.min.js"></script>
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="lib/bootstrap.min.css" rel="stylesheet">
+    <script src="lib/bootstrap.min.js"></script>
+    <script src="components/logo.js" type="text/javascript" defer></script>
+    <script src="scripts/main.js" type="text/javascript" defer></script>
+    <script src="components/background.js" type="text/javascript" defer></script>
     <script src="components/logo.js" type="text/javascript" defer></script>
     <title>DCUFlix</title>
 </head>
 
 <body>
-<logo-component></logo-component>
+<background-component></background-component>
 <div class="ctr">
-    <img src="../assets/home-background.jpg" alt="background image">
-    <div class="filter"></div>
     <div class="header">
-        <div class="header__logo-ctr">
-            <img class='header__logo' src="../assets/logo.png" alt="logo">
-        </div>
-        <input class="header__signin" type="button" value="Sign in">
+        <logo-component></logo-component>
+        <input class="header__signin" type="button" value="Sign in" onclick="redirect('login.html')">
     </div>
     <div class="ctr__hero">
         <h1> Unlimited films, TV programmes and more</h1>
@@ -29,11 +28,9 @@
         <p>Ready to watch? Enter your email to create or restart your membership.</p>
         <div class="ctr__hero__get-started">
             <input class="ctr__hero_email" type="text" placeholder="Email address"/>
-            <input class="ctr__hero_start" type="button" value="Get Started  >">
+            <input class="ctr__hero_start" type="button" value="Get Started  >" onclick="redirect('login.html')">
         </div>
     </div>
 </div>
-<script src="./scripts/script.js"></script>
 </body>
-
 </html>
