{+/~} Adding user (settings) view, and updatinf profile selection view (adding a button to go to user view).

--- a/profile-selection.html
+++ b/profile-selection.html
@@ -19,6 +19,7 @@
 
 <body class="bg-dark vh-100">
   <logo-component></logo-component>
+  <img class="settings-icon" src="assets/settings.svg" onclick="redirect('user.html')"/>
   <div class="d-flex flex-column justify-content-center align-items-center flex-nowrap" style="height: 85%">
     <p class="fs-1 text-white mb-4">Who's watching?</p>
     <div class="row text-center">
