{~} Updating margins for some containers and updatinf 'redirect' function calls.

--- a/movie_details.html
+++ b/movie_details.html
@@ -20,7 +20,7 @@
 <logo-component></logo-component>
 <img src="assets/moneyheist1.jpg" alt=""/>
 <div class="container text-white">
-    <button onclick=redirect("browse.html") class="btn btn-secondary">
+    <button onclick='redirect("browse.html")' class="btn btn-secondary">
         Go back
     </button>
     <div class="row ">
