--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
 <body>
   <background-component></background-component>
   <logo-component class="p"></logo-component>
-  <div class="container-l d-flex justify-content-center align-items-center" style="height: 90vh;">
+  <div class="container-l d-flex justify-content-center align-items-center" style="height: 90vh; padding-top: 15vh">
     <div class="d-flex flex-column justify-content-center align-items-center p-5" style="background-color: rgba(0,0,0,.75);">
       <form style="width: 20vw; min-width: 15rem">
         <p class="fs-2 text-white">Sign Up</p>
