--- a/browse.html
+++ b/browse.html
@@ -24,10 +24,9 @@
     <img class="bg" src="assets/banner.jpg" alt="Stranger Things"/>
     <nav>
         <ul>
-            <li><a href="news.html">News</a></li>
+            <li><a href="help.html">Help</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="browse.php">Notifications</a></li>
-            <li><a href="settings.html">Settings</a></li>
+            <li><a href="user.html">Settings</a></li>
         </ul>
     </nav>
     <div class="text">
@@ -37,7 +36,7 @@
 </div>
 <div class="carrousel_ctr">
     <div class="carrousel">
-        <div class="thumb" onclick=redirect('movie_details.html')>
+        <div class="thumb" onclick="redirect('movie_details.html')">
             <div class="thumb_ctr thumb1">
             </div>
         </div>
