{~} Updating some texts.

--- a/help.html
+++ b/help.html
@@ -28,12 +28,12 @@
       <form class="text-white" style="width: 40vw; min-width: 15rem">
         <h1>Help - FAQs</h1>
         <br>
-        <h3>What can I watch on Netflix?</h3>
-        <p>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
-        <h3>What is Netflix?</h3>
-        <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.</p>
+        <h3>What can I watch on DCUFlix?</h3>
+        <p>DCUFlix has an extensive library of feature films, documentaries, TV shows, anime, award-winning DCUFlix originals, and more. Watch as much as you want, anytime you want.</p>
+        <h3>What is DCUFlix?</h3>
+        <p>DCUFlix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.</p>
         <h3>How do I cancel?</h3>
-        <p>Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</p>
+        <p>DCUFlix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</p>
     </div>
   </div>
 </body>
