--- a/user.html
+++ b/user.html
@@ -76,7 +76,7 @@
           </tr>
           <tr>
             <td>EXTRA MEMBERS (NEW)</td>
-            <td>Share your Netflix with someone who doesn’t live with you by adding an extra member. Learn more in our
+            <td>Share your DCUFlix with someone who doesn’t live with you by adding an extra member. Learn more in our
               <u>Help Center</u>.
             </td>
             <td class="text-end"><a href="">Buy an extra member slot</a></td>
